# PlacementManageementCell

./: Cargo.toml  README.md  request.http
client/: README.md  index.html  package-lock.json  package.json
client/src/: App.jsx  index.css  index.jsx
client/src/Helpers/: CheckList.jsx  ColumnList.jsx  Field.jsx  LargeField.jsx  Model.js  NField.jsx  Select.jsx  index.js
client/src/components/Auth/: Login.jsx  Register.jsx  Verify.js  index.js
client/src/components/Category/: AddCategory.jsx  CategoryForm.jsx  ListCategories.jsx
client/src/components/Filter/: Filter.jsx  Filter2.jsx  Sheets.jsx  Table.jsx  index.js
client/src/components/Form/: Form.jsx  Form2.jsx  FormFields.jsx
client/src/components/Layout/: Footer.jsx  Header.jsx
client/src/utils/: Capitalize.js  Clickoutside.js  InfoModal.jsx  Modal.jsx  Store.jsx  VerifyToken.jsx  index.js
entity/: Cargo.toml
entity/src/: lib.rs
entity/src/entity/: board.rs  category.rs  family.rs  father_occupation.rs  gender.rs  mod.rs  mother_occupation.rs  personal.rs  pg.rs  prelude.rs  qualification.rs  specialization.rs  student.rs  teacher.rs
migration/src/: m20220101_000001_create_table.rs
src/: main.rs  utils.rs
src/handlers/: board.rs  category.rs  config.rs  family.rs  father_occupation.rs  filter.rs  gender.rs  mod.rs  mother_occupation.rs  personal.rs  pg.rs  prelude.rs  qualification.rs  specialization.rs  student.rs  teacher.rs
src/middlewares/: auth.rs
