[package]
edition = "2021"
name = "placement"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-web = "4.0.1"
dotenv = "0.15.0"
entity = {path = "entity"}
migration = {path = "migration"}

[workspace]
members = [
  ".",
  "entity",
  "migration",
]
