[package]
edition = "2021"
name = "placement"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-web = "4.0.1"
dotenv = "0.15.0"
entity = {path = "entity"}
jsonwebtoken = "8.1.0"
migration = {path = "migration"}
serde = { version = "1.0.136", features = ["derive"] }

[workspace]
members = [
  ".",
  "entity",
  "migration",
]
