[package]
edition = "2021"
name = "placement"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-web = "4.0.1"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
entity = {path = "entity"}
futures-util = "0.3.21"
jsonwebtoken = "8.1.0"
migration = {path = "migration"}
rust-argon2 = "1.0.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.80"

[workspace]
members = [
  ".",
  "entity",
  "migration",
]
