[package]
edition = "2021"
name = "entity"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = {version = "0.7.1", features = ["sqlx-mysql", "runtime-actix-rustls", "macros", "with-json", "with-chrono"], default-features = false}
serde = {version = "1.0.136", features = ["derive"]}
